--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
       
       - name: Cache Gradle packages
         uses: actions/cache@v3
@@ -93,6 +96,9 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
       
       - name: Cache Gradle packages
         uses: actions/cache@v3
